<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.nglauber.exemplolivros.DetalheLivroActivity">
    <item
        android:id="@+id/action_favorito"
        android:orderInCategory="100"
        android:title="@string/favorito"
        app:showAsAction="always|withText" />
    <item
        android:title="@string/compartilhar"
        android:id="@+id/action_share"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
</menu>
